# bufferdataclass

./: .gitignore  .readthedocs.yaml  LICENSE  README.md  pyproject.toml
.github/workflows/: check_and_deploy.yml
bufferstruct/: __init__.py
bufferstruct/util/: __init__.py  constraints.py  shape_pattern.py  shapes.py
docs/source/: conf.py  index.rst
python_ci_base/: app.py
scripts/: build.sh  doc.sh  lint.sh
templates/: build_docs.yml
tests/util_tests/: test_normalize_index.py  test_validate_shape.py
tests/util_tests/constraints_tests/: test_constraints.py
tests/util_tests/shape_pattern_tests/: test_shape_pattern.py  test_shape_var.py
